<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <LinearLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/t_from"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:textSize="@dimen/text_from_to"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/t_from_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="3dp"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_from_to"
            android:text="@string/from" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="@dimen/text_from_to"
            android:text="@string/amount" />

    </LinearLayout>

    <LinearLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/t_to"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:textSize="@dimen/text_from_to"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/t_to_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_from_to"
            android:paddingStart="10dp"
            android:paddingEnd="3dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/to" />

        <TextView
            android:id="@+id/t_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_from_to"
            android:text="@string/amount" />

    </LinearLayout>

    <LinearLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/t_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fake_date"
            android:layout_marginStart="10dp"
            android:textSize="@dimen/text_from_to"/>

        <TextView
            android:id="@+id/t_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fake_time"
            android:layout_marginStart="15dp"
            android:textSize="@dimen/text_from_to"/>

    </LinearLayout>

</LinearLayout>

